RE #58: Increased line-height of forms and buttons to 1.7 so that they are set to 36px high.  Also fixed width on sidenav so that it can move offscreen with margin.

--- a/demo/src/assets/styles/_variables.scss
+++ b/demo/src/assets/styles/_variables.scss
@@ -326,7 +326,7 @@ $btn-disabled-opacity:        .65;
 $btn-focus-box-shadow:        none !important;
 $btn-active-box-shadow:       none !important;
 
-$input-btn-line-height:       1.6;
+$input-btn-line-height:       1.7;
 
 $form-check-input-margin-x:             .3125rem;
 
